Introducción a mi pasteleria de chocolate

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pasteleria</title>
+</head>
+<body>
+  <h1>La gran pasteleria de chocolate</h1>
+  <p>Esta es la mejor pasteleria de chocolate que existe en el mundo. Tenemos mas de 10 años de experiencia brindando el mejor pastel a los paladres mas exigentes</p>
 
+  <img src="https://www.verybestbaking.com/sites/g/files/jgfbjl326/files/srh_recipes/6ac66e5882a6c7672cec34554a5a3a2d.jpg" alt="">
+
+</body>
+</html>
