--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>La gran pasteleria de chocolate</h1>
   <p>Esta es la mejor pasteleria de chocolate que existe en el mundo. Tenemos mas de 10 años de experiencia brindando el mejor pastel a los paladres mas exigentes</p>
 
-  <img src="https://www.verybestbaking.com/sites/g/files/jgfbjl326/files/srh_recipes/6ac66e5882a6c7672cec34554a5a3a2d.jpg" alt="">
+  <img src="https://www.azucardominomex.com/sites/azucardominomex_com/files/styles/m/public/2022-09/600x336_PASTEL-DE-CHOCOLATE-BRUCE.jpg.webp?itok=1xSHaWTo" alt="">
 
 </body>
 </html>
